--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -148,9 +148,9 @@
 	\begin{equation*} h_1 < h_2 \iff P^0_{1} \leq P^0_{2} \end{equation*}
 		\item The modified p-values are
 			\begin{align*}
-				\tilde{P}^0_1 &= \myPr{\max_{h\mathcal{A}} P^b_h < P^0_1 },\quad \mathcal{A} = \set{1,\ldots, S} \\
-				\tilde{P}^0_2 &= \myPr{\max_{h\mathcal{A}} P^b_h < P^0_2 },\quad \mathcal{A} = \set{2,\ldots, S} \\
-				\tilde{P}^0_i &= \myPr{\max_{h\mathcal{A}} P^b_h < P^0_i },\quad \mathcal{A} = \set{i,\ldots, S}
+				\tilde{P}^0_1 &= \myPr{\max_{h\in\mathcal{A}} P^b_h < P^0_1 },\quad \mathcal{A} = \set{1,\ldots, S} \\
+				\tilde{P}^0_2 &= \myPr{\max_{h\in\mathcal{A}} P^b_h < P^0_2 },\quad \mathcal{A} = \set{2,\ldots, S} \\
+				\tilde{P}^0_i &= \myPr{\max_{h\in\mathcal{A}} P^b_h < P^0_i },\quad \mathcal{A} = \set{i,\ldots, S}
 			\end{align*}			
 	\end{enumerate}
 	
